Solved Brodcast issue and UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,6 @@
         tools:replace="android:icon">
         <activity
             android:name=".Activities.SplashActivity"
-
-            android:excludeFromRecents="true"
             android:theme="@style/AppThemeSubActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -72,8 +70,6 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".LauncherActivity.MainActivity"
-
-            android:excludeFromRecents="true"
             android:theme="@style/AppThemeSubActivity" />
 
         <activity
@@ -85,7 +81,7 @@
             android:name=".Setting.SettingActivity"
             android:parentActivityName=".LauncherActivity.MainActivity"
 
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppThemeSubActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".LauncherActivity.MainActivity" />
