--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,13 @@ dependencies {
     compile "com.android.support:animated-vector-drawable:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
     compile "com.android.support:recyclerview-v7:${supportLibVersion}"
-    compile "com.android.support:cardview-v7:${supportLibVersion}"
     compile "com.android.support:palette-v7:${supportLibVersion}"
-    compile files('libs/jaudiotagger-2.0.4-SNAPSHOT.jar')
+    compile "com.android.support:animated-vector-drawable:${supportLibVersion}"
+    compile "com.android.support:mediarouter-v7:${supportLibVersion}"
+    compile "com.android.support:support-v4:${supportLibVersion}"
+    compile "com.android.support:support-vector-drawable:${supportLibVersion}"
+    compile "com.android.support:cardview-v7:${supportLibVersion}"
+
     // ----------------------------------
 
     //  Rx dependencies
@@ -73,8 +77,11 @@ dependencies {
     compile 'com.github.Triggertrap:SeekArc:v1.1'
     compile 'com.google.android.gms:play-services:11.0.1'
     compile 'commons-io:commons-io:2.4'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:support-vector-drawable:25.3.1'
+
+
+    //JAudioTagger
+    compile files('libs/jaudiotagger-2.0.4-SNAPSHOT.jar')
+
     compile 'com.google.firebase:firebase-core:11.0.1'
     compile 'com.google.firebase:firebase-crash:11.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
